@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0rc1
 
+	- Now show a "lock" icon next to static/private elements
+	  in FLUID.
 	- Implemented Fl_Menu_Item image labels using older
 	  1.0.x labeltype method.
 	- Updated the PNG library check to support both png.h
